# originiq

.claude/: launch.json
combine/backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  requirements-dev.txt  requirements-lite.txt  requirements.txt
combine/backend/app/: __init__.py  domain.py  main.py
combine/backend/app/api/: analyze.py  health.py  leaderboard.py  legacy.py  stats.py  truthcard.py
combine/backend/app/cache/: __init__.py  base.py  memory_client.py  redis_client.py
combine/backend/app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py
combine/backend/app/data/: seed_claims.json
combine/backend/app/db/: __init__.py  base.py  memory_repository.py  models.py  postgres_repository.py  repository.py  session.py
combine/backend/app/db/migrations/: env.py
combine/backend/app/integrations/: claimbuster.py  firebase_admin_client.py  firestore_client.py  google_factcheck.py
combine/backend/app/media/: truth_card.py
combine/backend/app/nlp/: claim_extractor.py  content_intake.py  damage_estimator.py  embedder.py  mutation_tracker.py  origin_tracer.py  pipeline.py  text_utils.py
combine/backend/app/schemas/: analyze.py  common.py  leaderboard.py  legacy.py  stats.py  truthcard.py
combine/backend/scripts/: seed_database.py
combine/backend/tests/: conftest.py
combine/backend/tests/integration/: test_api.py  test_rate_limit.py
combine/backend/tests/unit/: test_claimbuster.py  test_embedder.py  test_memory_repository.py  test_pipeline.py  test_text_utils.py
combine/docs/: PRD.md
(+133 files in other folders)
